# IOTSimulation

./: CMakeLists.txt  LICENCE.md  README.md
src/: Plane.cpp  Plane.hpp  main.cpp
src/Scheduler/: Clock.cpp  Clock.hpp  Scheduler.cpp  Scheduler.hpp
src/Sensors/: Humidity.cpp  Humidity.hpp  Light.cpp  Light.hpp  Pressure.cpp  Pressure.hpp  Sensor.cpp  Sensor.hpp  Temperature.cpp  Temperature.hpp
src/Server/: Package.cpp  Package.hpp  Server.cpp  Server.hpp
src/logs/: humidityLog.txt  lightLog.txt  pressureLog.txt  temperatureLog.txt
